fix voor de scrollbar en styling voor kaarten

--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -13,11 +13,7 @@
 }
 
 .list-container {
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
-}
-
-.list {
-    display: inline-block;
 }
