--- a/src/Components/List.css
+++ b/src/Components/List.css
@@ -1,10 +1,12 @@
 .list {
-    flex: 0 0 auto;
+    display: inline-block;
+    margin-left: .5em;
+    margin-right: .5em;
 }
 
 .card-container {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     white-space: nowrap;
     height: 35em;
 }
